--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Pokedex</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
 
