--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
 
+     <img src="/img/Pokemon-logo-497D61B223-seeklogo.com.png" alt="">
+
+
     <div class="pokemon-wrapper"></div>
     
 </body>
