delete html - moved to template literal in js

--- a/index.html
+++ b/index.html
@@ -6,71 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
 
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="cards-fetch.js" defer></script>
 </head>
 <body>
 
-     <img src="/img/Pokemon-logo-497D61B223-seeklogo.com.png" alt="">
+    <figure>
 
+     <img class="hero" src="/img/Pokemon-logo-497D61B223-seeklogo.com.png" alt="">
+    
+    </figure>
 
-    <div class="pokemon-wrapper">
+    <h1>Pokedex</h1>
 
-        <div class="cards">
-
-            <h2>Sobble</h2>
-            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/816.png" alt="">
-
-            <p><a href="details.html">More</a></p>
-
-        </div>
-
-        <div class="cards">
-
-            <h2>Kecleon</h2>
-            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/352.png" alt="">
-
-            <p><a href="">More</a></p>
-
-        </div>
-
-        <div class="cards">
-
-            <h2>Grimmsnarl</h2>
-            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/861.png" alt="">
-
-            <p><a href="">More</a></p>
-
-        </div>
-
-        <div class="cards">
-
-            <h2>Tetsugiri</h2>
-            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/978.png" alt="">
-
-            <p><a href="">More</a></p>
-
-        </div>
-
-        <div class="cards">
-
-            <h2>Bronzor</h2>
-            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/436.png" alt="">
-
-            <p><a href="">More</a></p>
-
-        </div>
-
-        <div class="cards">
-
-            <h2>Kricketune</h2>
-            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/402.png" alt="">
-
-            <p><a href="">More</a></p>
-
-        </div>
-
-    </div>
+    <div class="pokemon-wrapper"></div>
     
 </body>
 </html>
