--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <figure>
+    <figure class="hero-wrap">
 
      <img class="hero" src="/img/Pokemon-logo-497D61B223-seeklogo.com.png" alt="">
     
