adding and fixing some html

--- a/details.html
+++ b/details.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Details</title>
 
-<link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
+
 <body>
 
     <div class="wrapper">
 
-        <h1>Sobble</h1>
+        <h1 class="details-name">Sobble</h1>
 
-        <figure class="">
+        <div class="sprites-wrap">
+            <figure class="sprites">
 
-            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/816.png" alt="">
-            <p>Normal</p>
-            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/816.png" alt="">
-            <p>shiny</p>
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/816.png" alt="">
+                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/816.png"
+                    alt="">
 
-        </figure>
+            </figure>
+
+            <section class="sprites-text">
+
+                <p>Normal</p>
+                <p>Shiny</p>
+
+            </section>
+        </div>
 
         <section class="details-info">
 
@@ -36,15 +46,11 @@
                 <dd>40</dd>
 
             </dl>
-       
-            <!-- <p>type: water</p>
-        <p>height: 3</p>
-        <p>weight: 40</p> -->
-
 
         </section>
 
     </div>
-    
+
 </body>
+
 </html>
