--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     </figure>
 
-    <h1>Pokedex</h1>
+    <h1 class="pokedex">Pokedex</h1>
 
     <div class="pokemon-wrapper"></div>
     
