--- a/details.html
+++ b/details.html
@@ -15,6 +15,12 @@
 
     <div class="wrapper">
 
+        <figure class="hero-wrap">
+
+            <img class="hero" src="/img/Pokemon-logo-497D61B223-seeklogo.com.png" alt="">
+           
+           </figure>
+
         <h1 class="details-name">Sobble</h1>
 
         <div class="sprites-wrap">
