deleted html for details - is in details js

--- a/details.html
+++ b/details.html
@@ -8,52 +8,13 @@
     <title>Details</title>
 
     <link rel="stylesheet" href="css/style.css">
+    <script src="details.js" defer></script>
 
 </head>
 
 <body>
 
     <div class="wrapper">
-
-        <figure class="hero-wrap">
-
-            <img class="hero" src="/img/Pokemon-logo-497D61B223-seeklogo.com.png" alt="">
-           
-           </figure>
-
-        <h1 class="details-name">Sobble</h1>
-
-        <div class="sprites-wrap">
-            <figure class="sprites">
-
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/816.png" alt="">
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/816.png"
-                    alt="">
-
-            </figure>
-
-            <section class="sprites-text">
-
-                <p>Normal</p>
-                <p>Shiny</p>
-
-            </section>
-        </div>
-
-        <section class="details-info">
-
-            <dl>
-
-                <dt>Type:</dt>
-                <dd>Water</dd>
-                <dt>Height:</dt>
-                <dd>3</dd>
-                <dt>Weight:</dt>
-                <dd>40</dd>
-
-            </dl>
-
-        </section>
 
     </div>
 
