add axios to replace fetch

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Pokedex</title>
 
     <link rel="stylesheet" href="/css/style.css">
-    <script src="cards-fetch.js" defer></script>
+    <script src="cards-fetch.js" type="module" defer></script>
 </head>
 <body>
 
